# garage_storage

./: .gitignore  README.md  TODO  __llm_test.py  config.yaml  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py  extensions.py  forms.py  llm_image_classification.py  logger_config.py  models.py  routes.py  utils.py
app/main/: routes.py
app/static/css/: style.css
app/templates/: add_box.html  base.html  batch_upload.html  boxes.html  classify_items.html  edit_box.html  edit_item.html  index.html  new_box.html  new_item.html  new_location.html  search_results.html  upload_csv.html  view_box.BACKUP.html  view_box.html
migrations/versions/: add_location_id_to_box.py  xxx_remove_box_name_unique.py
